# ferox-desktop

./: .gitignore  Cargo.toml  Makefile  README.md  TODO.md  machs
.cargo/: config.toml
data/: tab_window.glade
mlib/: DOC.txt  README.txt  __init__.py  command.py  dependencys.py  enums.py  internals.py  onfiguration.py  project.py  std.py  var.py
mlib/modules/: cargo.py  gnome.py
src/: app.rs  config.rs.in  ferox.gresource.xml  machs  main.rs
src/gtk/: dark.css  style.css  tab-window.glade  tab-window.ui  test_uis.cmb
src/ui/: mod.rs  tabed_window.rs
